# medasr-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-03-09-ui-improvements-design.md  2026-03-09-ui-improvements.md
docs/superpowers/plans/: 2026-04-10-simplify-ui.md
docs/superpowers/specs/: 2026-04-10-simplify-ui-design.md
samples/: sample_transcript.txt
tests/: test_app.py  test_helper.py
tests/data/text/: transcript.txt
utils/: helper.py
