[project]
name = "medasr-pipeline"
version = "0.2.0"
description = "Medical dictation transcription using Google's MedASR model"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub",
    "jiwer",
    "kenlm",
    "levenshtein",
    "librosa",
    "pyctcdecode",
    "python-dotenv",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
pythonpath = ["."]
